app/globals.css
@import 'tailwindcss';

body {
  background: url('/confetti-bg.jpg');
}

@media screen and (max-width: 768px) {
  body {
    background: url('/confetti-bg-mobile.jpg');
  }
}

.font-mogra {
  font-family: var(--font-mogra);
}

.font-comicRelief {
  font-family: var(--font-comic-relief);
}

